joblib (0.6.0-1) unstable; urgency=low

  * New upstream release
  * Dropped patch up_python25_compatibility (adopted upstream)

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 05 Feb 2012 15:44:54 -0500

joblib (0.6.0~b3-1) unstable; urgency=low

  * Fresh upstream beta releaase addressing compatibility issues with
    python 2.5 and older numpy's.
  * Forwarded upstream patch up_python25_compatibility

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 12 Jan 2012 10:19:06 -0500

joblib (0.6.0~b2-1) unstable; urgency=low

  * Fresh upstream beta release (used by sklearn)

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 10 Jan 2012 17:37:07 -0500

joblib (0.5.4-1) unstable; urgency=low

  * Fresh upstream release
  * Package is now clean without any spurious post-release changes
    (Closes: #643170)
  * Policy boost to 3.9.2 -- no changes
  * debian/watch: adjusted for change in github layout

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 17 Oct 2011 19:21:36 -0400

joblib (0.5.1-1) unstable; urgency=low

  * Fresh upstream release
  * Enforce python_distutils dh buildsystem (upstream has Makefile now)
  * Handle 'nocheck' to avoid build-time testing
  * Install CHANGES.rst as the upstream changelog

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 11 Apr 2011 17:11:12 -0400

joblib (0.4.6-2) unstable; urgency=low

  * Upload to unstable

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 06 Apr 2011 14:02:37 -0400

joblib (0.4.6-1) experimental; urgency=low

  * Upcoming upstream bugfix release
  * Added a patch for older distributions (e.g. lenny) to avoid
    testing 1 failing doctest due non-memmaped automatically arrays
    with older numpy releases

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 14 Nov 2010 01:23:01 -0500

joblib (0.4.5-1) experimental; urgency=low

  * New upstream release
  * debian/control:
    - moved numpy into Recommends
    - point -vcs to github
    - policy boost to 3.9.1 -- no changes

